Make sure Check Out Stock search can be selected.  Won't allow click when z-index is -1

--- a/woocommerce/inventory.css
+++ b/woocommerce/inventory.css
@@ -10,17 +10,21 @@
   width:100%
 }
 
-.select2-container--default {
-  z-index:-1 !important;
-}
-
-.select2-container--default li.select2-results__option--highlighted {
+.select2-container--default li.select2-results__option {
   background:transparent !important;
   color:#6d6d6d !important
 }
 .select2-dropdown {
-  border:none !important
+  border:none !important;
 }
+
+/* do not hide pricing & availability column on small screens */
+.fl-col-small {
+  position:fixed;
+  right:0;
+  background:white;
+}
+
 .site-footer {
   display:none
 }
